Integrate with YunoHost's multimedia directories

--- a/scripts/install
+++ b/scripts/install
@@ -127,6 +127,16 @@ chmod -R o-rwx "$final_path"
 chown -R $app: "$final_path"
 
 #=================================================
+# YUNOHOST MULTIMEDIA INTEGRATION
+#=================================================
+ynh_script_progression --message="Adding multimedia directories..." --weight=2
+
+# Build YunoHost multimedia directories
+ynh_multimedia_build_main_dir
+# Enable writing into these directories
+ynh_multimedia_addaccess $app
+
+#=================================================
 # GENERIC FINALIZATION
 #=================================================
 # SETUP LOGROTATE
