--- a/scripts/install
+++ b/scripts/install
@@ -27,6 +27,7 @@ ynh_abort_if_errors
 domain=$YNH_APP_ARG_DOMAIN
 path_url=$YNH_APP_ARG_PATH
 admin=$YNH_APP_ARG_ADMIN
+architecture=$YNH_ARCH
 
 app=$YNH_APP_INSTANCE_NAME
 
@@ -85,7 +86,7 @@ get_architecture
 
 ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 # Download, check integrity, uncompress and patch the source from app.src
-ynh_setup_source --dest_dir="$final_path" --source_id="app.$architecture"
+ynh_setup_source --dest_dir="$final_path" --source_id="$architecture"
 
 mkdir -p "$final_path/.data/logs"
 
