--- a/scripts/install
+++ b/scripts/install
@@ -86,7 +86,7 @@ get_architecture
 
 ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 # Download, check integrity, uncompress and patch the source from app.src
-ynh_setup_source --dest_dir="$final_path" --source_id="architecture"
+ynh_setup_source --dest_dir="$final_path" --source_id="$architecture"
 
 mkdir -p "$final_path/.data/logs"
 
