--- a/scripts/install
+++ b/scripts/install
@@ -170,7 +170,7 @@ yunohost service add $app --description="Lidarr daemon" --log="$data_path/logs/l
 ynh_script_progression --message="Starting a systemd service..." --weight=2
 
 # Start a systemd service
-ynh_systemd_action --service_name=$app --action="start" --log_path="systemd" --line_match="Starting Web Server"
+ynh_systemd_action --service_name=$app --action="start" --log_path="systemd" --line_match="Application started"
 
 #=================================================
 # SETUP SSOWAT
