--- a/scripts/install
+++ b/scripts/install
@@ -19,6 +19,10 @@ ynh_setup_source --dest_dir="$install_dir"
 
 mkdir -p "$data_dir/logs"
 
+chmod 750 "$install_dir"
+chmod -R o-rwx "$install_dir"
+chown -R $app: "$install_dir"
+
 #=================================================
 # NGINX CONFIGURATION
 #=================================================
@@ -45,16 +49,7 @@ ynh_script_progression --message="Configuring Lidarr..." --weight=2
 api_key=$(ynh_string_random --length=32)
 ynh_app_setting_set --app=$app --key=api_key --value=$api_key
 
-ynh_add_config --template="../conf/config.xml" --destination="$data_path/config.xml"
-
-#=================================================
-# SETUP FILE PERMISSIONS
-#=================================================
-ynh_script_progression --message="Setting files permissions and ownership..." --weight=1
-
-chmod 750 "$install_dir"
-chmod -R o-rwx "$install_dir"
-chown -R $app: "$install_dir"
+ynh_add_config --template="../conf/config.xml" --destination="$data_dir/config.xml"
 
 chmod 400 "$data_dir/config.xml"
 chown $app:$app "$data_dir/config.xml"
@@ -77,7 +72,6 @@ ynh_multimedia_addaccess $app
 ynh_script_progression --message="Configuring log rotation..." --weight=1
 
 # Use logrotate to manage application logfile(s)
-ynh_use_logrotate
 ynh_use_logrotate --logfile="$data_dir/logs"
 
 #=================================================
